finalização da implementação
