# server/api/controllers/estudantes/router.js
@@ -1,14 +1,17 @@
 import * as express from 'express';
 import controller from './controller';
+import cache from './../../services/cache.service.js';
+
+const cacheTime = 20;
 
 export default express
   .Router()
   .post('/novo', controller.create)
-  .post('/listarModalidade', controller.listarModalidade)
-  .get('/listarCursos/:campus', controller.listarCursos)
-  .get('/totalAlunos', controller.all)
-  .get('/buscarAluno/:ra', controller.all)  
-  .get('/getById/:id', controller.byId)
-  .get('/', controller.all)
-  .delete('/deletar', controller.all);
+  .get('/listarModalidade/:modalidade/:data_inicio/:data_fim', cache(cacheTime), controller.listarModalidade)
+  .get('/listarCursos/:campus', cache(cacheTime), controller.listarCursos)
+  .post('/totalAlunos', controller.totalAlunos)
+  .get('/buscarAluno/:ra', cache(cacheTime), controller.byRA)  
+  .get('/getById/:id', cache(cacheTime), controller.byId)
+  .get('/', cache(cacheTime), controller.all)
+  .delete('/deletar', controller.deletarEstudante);
   
